--- a/WEBB TEST 1/style.css
+++ b/WEBB TEST 1/style.css
@@ -2,18 +2,37 @@
   font-size: 62.5%;
 }
 
-body {
+* {
   margin: 0;
   padding: 0;
-  width: 100vw;
-  height: 100vh;
+  box-sizing: border-box;
 }
 
-.center-flex {
+body {
+}
+
+.container {
   display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.center-flex {
   justify-content: center;
   align-items: center;
 }
 
-.container {
+form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+#login-box {
+  background-color: blue;
+  height: 100%;
+  max-width: 30%;
+  margin: 0 auto;
 }
